// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleGenerateError AggregateError 1`] = `
"
[31m✖ Error: foo[39m
[90m    at foo.ts:1:1[39m

[31m✖ Error: bar[39m
[90m    at foo.ts:1:1[39m

[31merror[39m - Found 2 errors in total
"
`;

exports[`handleGenerateError nested AggregateError 1`] = `
"
[31m✖ Error: foo[39m
[90m    at foo.ts:1:1[39m

[31m✖ Error: bar[39m
[90m    at foo.ts:1:1[39m

[31m✖ Error: baz[39m
[90m    at foo.ts:1:1[39m

[31merror[39m - Found 3 errors in total
"
`;

exports[`handleGenerateError normal error 1`] = `
"
[31m✖ Error: foo[39m
[90m    at foo.ts:1:1[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues cause is a empty object 1`] = `
"
[4mcomponents/foo.ts[24m

[31m✖ Error message[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues cwd is not empty 1`] = `
"
[4mcomponents/foo.ts[24m

[31m✖ Error message[39m

[4m/abc/def/components/bar.ts[24m

[31m✖ Error message[39m

[31merror[39m - Found 2 errors in total
"
`;

exports[`printIssues ignore manifests without issues 1`] = `
"
[4mcomponents/bar.ts[24m

[31m✖ Error message[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues index is not empty 1`] = `
"
[4mcomponents/foo.ts[24m - [2, 4]

[31m✖ Error message[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues issue contains a Error class cause 1`] = `
"
[4mcomponents/foo.ts[24m

[31m✖ Error message[39m
[90m  Error: foobar
      at foo.ts:1:1[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues issue contains a string cause 1`] = `
"
[4mcomponents/foo.ts[24m

[31m✖ Error message[39m
[90m  Error: Cause message[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues issue contains an object cause 1`] = `
"
[4mcomponents/foo.ts[24m

[31m✖ Error message[39m
[90m  FooError: foobar[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues manifest contains metadata 1`] = `
"
[4mcomponents/foo.ts[24m - v1/Pod foo

[31m✖ Error message[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues metadata and index are present 1`] = `
"
[4mcomponents/foo.ts[24m - v1/Pod foo [2, 4]

[31m✖ Error message[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues metadata contains namespace 1`] = `
"
[4mcomponents/foo.ts[24m - v1/Pod default/foo

[31m✖ Error message[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues multiple issues 1`] = `
"
[4mcomponents/foo.ts[24m

[31m✖ Error 1[39m

[33m⚠ Warning 1[39m

[31m✖ Error 2[39m

[4mcomponents/bar.ts[24m

[31m✖ Error 3[39m

[31merror[39m - Found 3 errors and 1 warning in total
"
`;

exports[`printIssues single error issue 1`] = `
"
[4mcomponents/foo.ts[24m

[31m✖ Error message[39m

[31merror[39m - Found 1 error in total
"
`;

exports[`printIssues single warning issue 1`] = `
"
[4mcomponents/foo.ts[24m

[33m⚠ Warning message[39m

[33mwarn [39m - Found 1 warning in total
"
`;
